--- a/data-verifier/package.json
+++ b/data-verifier/package.json
@@ -15,6 +15,7 @@
     "body-parser": "^1.18.2",
     "eslint": "^4.19.1",
     "express": "^4.16.2",
+    "lodash": "^4.17.5",
     "mongoose": "^5.0.12",
     "morgan": "^1.9.0",
     "multer": "^1.3.0"
